Skip to content

Opus failing on 5.1 (channel mapping family 1)

This sample test-5.1.opus is erroneously ending up in the decoder matrix branch of this header parsing function:

https://code.videolan.org/videolan/vlc/-/blob/master/modules/codec/opus_header.c#L212

This gets rejected as the matrix_entries vs. matrix_size check fails (as these are junk values), and playback breaks with a loop of:

[00007ff98c028670] opus decoder error: cannot read Opus header
[00007ff98c028670] opus decoder error: initial Opus header is corrupted

Channel mapping family 1 (vorbis channel layout) is defined here:

https://www.rfc-editor.org/rfc/rfc7845.html#section-5.1.1.2

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information