opus_header: fix channel mapping family 1 parsing

Fixes #27808